--- a/Objects/USART_UART_ECHO_DMA_Registers_wStruct.build_log.htm
+++ b/Objects/USART_UART_ECHO_DMA_Registers_wStruct.build_log.htm
@@ -5,34 +5,32 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.25.3.0
 Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Teorrr Teodor, Student, LIC=EPPJJ-U6SVS-8XXUZ-JARH1-K1DVA-GZPDA
+License Information: Teodor tktofi@gmail.com, Politechnika Rz, LIC=IC93N-Y29L3-LVS1I-T74CC-BLK22-A2CLP
  
 Tool Versions:
-Toolchain:       MDK-ARM Professional  Version: 5.29.0.0
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 6 (build 750)
-Assembler:       Armasm.exe V5.06 update 6 (build 750)
-Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
-Library Manager: ArmAr.exe V5.06 update 6 (build 750)
-Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
-CPU DLL:         SARMCM3.DLL V5.29.0.0
+Toolchain:       MDK-ARM Professional  Version: 5.34.0.0
+Toolchain Path:  E:\Keil\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 7 (build 960)
+Assembler:       Armasm.exe V5.06 update 7 (build 960)
+Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
+Library Manager: ArmAr.exe V5.06 update 7 (build 960)
+Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
+CPU DLL:         SARMCM3.DLL V5.34.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
-Dialog DLL:      TCM.DLL V1.36.5.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
+Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
 E:\STM32_Teo\USART_UART_ECHO_DMA_Registers_wStruct\USART_UART_ECHO_DMA_Registers_wStruct.uvprojx
-Project File Date:  03/29/2021
+Project File Date:  06/07/2021
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'E:\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling main.c...
-compiling GPIO_fun.c...
-compiling RCC_Config.c...
 compiling USART_UART_DMA.c...
 linking...
-Program Size: Code=1744 RO-data=364 RW-data=1660 ZI-data=1676  
+Program Size: Code=1988 RO-data=1024 RW-data=1664 ZI-data=2876  
 ".\Objects\USART_UART_ECHO_DMA_Registers_wStruct.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -44,27 +42,40 @@ Package Vendor: ARM
    * Component: CORE Version: 5.4.0
 
 Package Vendor: Keil
+                http://www.keil.com/pack/Keil.ARM_Compiler.1.6.3.pack
+                Keil.ARM_Compiler.1.6.3
+                Keil ARM Compiler extensions for ARM Compiler 5 and ARM Compiler 6
+   * Component: Event Recorder Variant: DAP Version: 1.4.0
+
+Package Vendor: Keil
                 http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.3.0.pack
                 Keil.STM32F1xx_DFP.2.3.0
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
    * Component: Startup Version: 1.0.0
 
 <h2>Collection of Component include folders:</h2>
+  .\RTE\Compiler
   .\RTE\Device\STM32F103RB
   .\RTE\_Target_1
-  C:\Users\Teodor\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  C:\Users\Teodor\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  E:\KeilPacks\ARM\CMSIS\5.7.0\CMSIS\Core\Include
+  E:\KeilPacks\Keil\ARM_Compiler\1.6.3\Include
+  E:\KeilPacks\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
+
+   * Component: Keil.ARM Compiler::Compiler:Event Recorder:DAP:1.4.0
+      Include file:  Config\EventRecorderConf.h
+      Include file:  Include\EventRecorder.h
+      Source file:   Source\EventRecorder.c
 
    * Component: Keil::Device:Startup:1.0.0
       Source file:   Device\Source\ARM\startup_stm32f10x_md.s
       Source file:   Device\Source\system_stm32f10x.c
       Include file:  RTE_Driver\Config\RTE_Device.h
       Source file:   Device\Source\ARM\STM32F1xx_OPT.s
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
