--- a/Objects/USART_UART_ECHO_DMA_Registers_wStruct.build_log.htm
+++ b/Objects/USART_UART_ECHO_DMA_Registers_wStruct.build_log.htm
@@ -27,15 +27,10 @@ Project File Date:  06/18/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'E:\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
-main.c(55): warning:  #191-D: type qualifier is meaningless on cast type
-  	NVIC_SetPriorityGrouping(PRIGROUP_4G_4S);
-main.c(58): warning:  #191-D: type qualifier is meaningless on cast type
-  				 prio = NVIC_EncodePriority(PRIGROUP_4G_4S, 0, 0);
-main.c: 2 warnings, 0 errors
+compiling PrintToBuf.c...
 linking...
-Program Size: Code=11968 RO-data=1236 RW-data=1692 ZI-data=3424  
-".\Objects\USART_UART_ECHO_DMA_Registers_wStruct.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=11968 RO-data=1236 RW-data=1688 ZI-data=3428  
+".\Objects\USART_UART_ECHO_DMA_Registers_wStruct.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
